# Platformer

./: CMakeLists.txt  Makefile  README.md
app/: build.gradle
app/jni/: Application.mk
app/jni/src/: Android.mk
gradle/wrapper/: gradle-wrapper.properties
include/: connect.h  main.h  movement.h  network.h  params.h  serialize.h  server.h  structs.h
src/: client.c  main.c  movement.c  network.c  serialize.c  server.c
